# cargo-cake

./: Cargo.toml  GNUmakefile  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: main.rs
