[package]
name = "cargo-cake"
version = "1.0.6"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "A cake for celebrating Rust's birthday"
homepage = "https://github.com/booyaa/cargo-cake/"
repository = "https://github.com/booyaa/cargo-cake/"
readme = "README.md"
keywords = ["cake","birthday","joke"]
license-file = "LICENSE.txt"
edition = "2018"

[dependencies]
rust_birthday = "0.1.*"
